0.1.2
-----
1. Use _50x50_o for list covers, and _300x300_f for grid covers.
2. Add scaled image to slideshow list, and only fetch full sized image when
   slideshow active.
3. Crop list images as per grid images.
4. Add bitrate and file type to now playing.
5. Only show year if >0

0.1.1
-----
 1. Only list players that are connected.
 2. Add 'Play album starting at track' item to track context menus. Only if
    parent is an album, and track is not 1st track.
 3. Respect genre/artist filtering when adding albums/artists to queue.
 4. Add a setting to specify application layout; auto, desktop, mobile.
 5. Add optional grid view for artists, albums, and SlimBrowse icon_list.
 6. Fix durations longer than 24hrs.
 7. Add plugin update info to Information dialog.
 8. Disable swipe to change views whilst photo slideshow is open.
 9. When listing a genre's items, ask whether to list Artists or Albums.
10. Always send volume up commands, even if at 100% already.
11. List all artists of a track in toolbar, queue, and now playing.
12. Fix text/html weblinks.

0.1.0
-----
 1. After list is loaded, wait until next tick to scroll to top.
 2. Fix detection of first valid album when getting A..Z lists.
 3. Show context menu when clicking on an item that has actions.go=playControl
    or actions.go=play
 4. Initial work on desktop UI.
 5. Check with server to determine whether to show track numbers in queue.
 6. Colour current track in queue.
 7. Don't check artist/album in MusicArtistInfo is same as current track, as the
    plugin may remove characters (e.g. brackets).
 8. Clicking on title in browse sub-toolbar will produce a menu allowing
    navigation back multiple levels.
 9. Fix language update causing browse items to disappear.
10. Use artist_id and album_id to obtain info if available.

0.0.9
-----
 1. Additional browse modes only supported if "Use categories as supplied by
    server" is enabled.