@@ -118,7 +118,7 @@ var lmsBrowse = Vue.component("lms-browse", {
   <v-container grid-list-sm fluid>
    <v-layout row wrap>
     <v-flex v-for="(item, index) in items" :key="item.id">
-     <v-card flat tile>
+     <v-card flat tile :title="item | tooltip">
       <v-card-text v-if="item.type=='image'" class="image-grid-item">
        <v-img :src="item.thumb" :lazy-src="item.thumb" aspect-ratio="1" @click="showImage(index)"></v-img>
        {{item.caption}}
@@ -1246,7 +1246,7 @@ var lmsBrowse = Vue.component("lms-browse", {
                         this.pinned.splice(index, 1);
                         this.options.pinned.delete(item.id);
                         this.pinned.sort(titleSort);
-                        setLocalStorageVal('pinned', JSON.stringify(this.pinned));
+                        setLocalStorageVal('pinned', JSON.stritooltipngify(this.pinned));
                         this.$forceUpdate();
                     }
                 });
@@ -1357,5 +1357,16 @@ var lmsBrowse = Vue.component("lms-browse", {
         this.$nextTick(function () {
             setScrollTop(this.scrollElement, 0);
         });
-    }
+    },
+    filters: {
+        tooltip: function (item) {
+            if (undefined==item ) {
+                return '';
+            }
+            if (item.title && item.subtitle) {
+                return item.title+"\n"+item.subtitle;
+            }
+            return item.title;
+        }
+    },
 });
